--- a/manifest.json
+++ b/manifest.json
@@ -7,14 +7,13 @@
     "theme_color": "#4CAF50",
     "icons": [
     {
-    "src": "/icons/icons8-app-500.png",
     "src": "/icons/icons8-hitler-100.png",
-    "sizes": "192x192",
+    "sizes": "100x100",
     "type": "image/png"
     },
     {
-    "src": "/images/icon-512x512.png",
-    "sizes": "512x512",
+    "src": "/images/icons8-app-500.png",
+    "sizes": "500x500",
     "type": "image/png"
     }
     ]
